--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+body {
+  min-width: 300px;
+}
 
+.container {
+  background-color: #013571;
+}
+.container #mainHead {
+  width: 100%;
+  margin: 0px auto;
+  display: block;
+  margin-top: -10px;
+}
 
 /*# sourceMappingURL=style.css.map */
