--- a/LostAndFound/lostfound/templates/lostfound/itemform.html
+++ b/LostAndFound/lostfound/templates/lostfound/itemform.html
@@ -24,7 +24,7 @@
         <div class="input-group mb-3">
             <input type="text" name="email" class="form-control" placeholder="E-Mail Address" aria-label="Recipient's username"
                 aria-describedby="basic-addon2" required>
-            <span class="input-group-text" id="basic-addon2">@gmail.com</span>
+            <span class="input-group-text" id="basic-addon2">@iiitdmj.ac.in</span>
         </div>
 
         <div class="input-group mb-3">
