--- a/LostAndFound/lostfound/templates/lostfound/login.html
+++ b/LostAndFound/lostfound/templates/lostfound/login.html
@@ -1,16 +1,35 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+        <link rel="stylesheet" href="{% static 'lostfound/stylelogin.css' %}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LOGIN</title>
+    <title>PDPM IIITDMJ</title>
+    <link rel="shortcut icon" href="/images/IIITDM-Jabalpur-Logo.webp">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-        <form action="{% url 'login' %}" method="post">
-            {% csrf_token %}
-        <input name = "username" placeholder="Username" type="text">
-        <input name="password" placeholder="Password" type="password">
-        <input type="submit" value="LogIN" class="last">
-        </form>
+
+    <a href="https://www.iiitdmj.ac.in/" target="blank">
+    <img class="head" src="{% static 'lostfound/mainHeading.jpeg' %}" alt="logo">
+    </a>
+
+    <h2 style="text-align:center; margin-top:5%;">Lost & Found PORTAL</h2>
+    <div class="main">
+        <div class="box">
+            <form action="{% url 'login' %}" method="post">
+                {% csrf_token %}
+                <h2>Enter Credentials</h2>
+            <input name = "username" placeholder="Username" type="text" class="input-group mb-3">
+            <input name="password" placeholder="Password" type="password" class="input-group mb-3">
+            <input type="submit" value="LogIN" class="last">
+            </form>
+
+        </div>
+    </div>
+
 </body>
 </html>
 
