--- a/LostAndFound/lostfound/templates/lostfound/itemform.html
+++ b/LostAndFound/lostfound/templates/lostfound/itemform.html
@@ -54,7 +54,7 @@ data-fv-field="data[User][mobile]" required> -->
         </div>
         <div class="input-group mb-3">
             <select name="category" class="custom-select form-control" id="inputGroupSelect04" required>
-              <option selected disabled>Select Category</option>
+              <option value="blah" selected disabled>Select Category</option>
                     {% for category in categories %}
                     <option value="{{ category }}"> {{ category }} </option>
                     {% endfor %}
