--- a/LostAndFound/lostfound/templates/lostfound/my_requests.html
+++ b/LostAndFound/lostfound/templates/lostfound/my_requests.html
@@ -1,23 +1,38 @@
-{% load static %}
+{% load static %}   
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <link rel="stylesheet" href="{% static 'lostfound/styleitem.css' %}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PDPM IIITDMJ</title>
+    <title>My Requests</title>
     <link rel="shortcut icon" href="/images/IIITDM-Jabalpur-Logo.webp">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <style>
+        h1, h3{
+            text-align: center;
+        }
+        h1 {
+            margin: 10%;
+        }
+    </style>
 </head>
 <body>
     <a href="https://www.iiitdmj.ac.in/" target="blank">
             <img class="head" src="{% static 'lostfound/mainHeading.jpeg' %}" alt="logo">
     </a>
 
+   <a href="{% url 'logout' %}">
+   <button type="button" style="width: 10%; margin: 1% 5% 0 85%;" class="btn btn-dark">Log out</button>
+   </a>
+
+    <h1> My Requests </h1>
+
     <div class="header">
-            <h2>{{ category }}</h2>
     </div>
+
 
     <div class="items">
         {% for item in items reversed %}
@@ -30,7 +45,7 @@
             </div>
           </div>
         {% empty %}
-        <h3 style="margin:5%;">No items in this category</h3>
+        <h3>No items in this category</h3>
         {% endfor %}
 </body>
 </html>
